# TapoController

./: .gitignore  Cargo.toml  LICENSE  M0-FINDINGS.md  README.md  index.html  package-lock.json  package.json  tapo-config.example.toml  vite.config.ts
crates/tapo-cli/: Cargo.toml
crates/tapo-cli/src/: main.rs
crates/tapo-proto/: Cargo.toml
crates/tapo-proto/src/: config.rs  device.rs  diagnose.rs  discover.rs  error.rs  http.rs  klap.rs  lib.rs  passthrough.rs  service.rs
docs/: API.md  SOURCEFORGE.md
examples/: ambilight-demo.mjs
scripts/: gen-icon.mjs  gh-release.mjs
src/: App.tsx  i18n.ts  styles.css  tauri.ts
src-tauri/: Cargo.toml  tauri.conf.json  tauri.windows.conf.example.json
src-tauri/capabilities/: default.json
src-tauri/src/: ambilight.rs  api_server.rs  lib.rs  main.rs
