[workspace]
resolver = "2"
members = [
    "crates/tapo-proto",
    "crates/tapo-cli",
    "src-tauri",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["TapoController"]

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["cookies", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
anyhow = "1"
rand = "0.8"
sha2 = "0.10"
sha1 = "0.10"
md-5 = "0.10"
aes = "0.8"
cbc = { version = "0.1", features = ["std"] }
base64 = "0.22"
rsa = { version = "0.9", features = ["sha2", "pem"] }
toml = "0.8"
axum = { version = "0.7", features = ["ws"] }
tower-http = { version = "0.6", features = ["cors"] }
futures-util = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive", "env"] }
