[package]
name = "tapo-controller"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Cloud-free desktop controller for Tapo bulbs"

[lib]
name = "tapo_controller_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "tapo-controller"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tapo-proto = { path = "../crates/tapo-proto" }
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-shell = "2"
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
axum.workspace = true
tower-http.workspace = true
futures-util.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
xcap = "0.9"
image = { version = "0.25", default-features = false }

[dev-dependencies]
reqwest = { workspace = true }

[features]
# Used by Tauri when bundling.
custom-protocol = ["tauri/custom-protocol"]
