[package]
name = "tapo-proto"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Own (no-cloud) implementation of the TP-Link Tapo KLAP local protocol"

[dependencies]
tokio.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
rand.workspace = true
sha2.workspace = true
sha1.workspace = true
md-5.workspace = true
aes.workspace = true
cbc.workspace = true
base64.workspace = true
rsa.workspace = true
toml.workspace = true
tracing.workspace = true

[dev-dependencies]
hex = "0.4"
